# ai-content-platform

./: .env.example  .env.production  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx-prod.conf
.github/workflows/: build-macos.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: accounts.ts  contents.ts  logs.ts  tasks.ts
frontend/src/components/: AccountList.tsx  ContentList.tsx  CreateAccountModal.tsx  CreateTaskModal.tsx  LogList.tsx  TaskList.tsx
frontend/src/components/layout/: TheHeader.vue  TheSidebar.vue
frontend/src/composables/: useAuth.ts  useDashboard.ts  useLogs.ts  useMobileNav.ts  useTasks.ts  useWebSocket.ts
frontend/src/lib/: api.ts  http.ts
frontend/src/router/: index.ts
frontend/src/types/: account.d.ts  content.d.ts  task.d.ts
frontend/src/views/: AccountsView.vue  DashboardView.vue  LogsView.vue  TasksView.vue
net_guard/: Cargo.toml  build.rs
net_guard/src/: main.rs
net_guard/src/collector/: mod.rs  nettop.rs  process.rs
net_guard/src/gui/: history_chart.rs  mod.rs  process_list.rs  traffic_panel.rs
net_guard/src/storage/: database.rs  mod.rs
net_guard/src/utils/: mod.rs
src/: main.rs  state.rs
src/db/: migrations.rs  mod.rs  postgres.rs
src/handler/: account_handler.rs  content_handler.rs  log_handler.rs  mod.rs  task_handler.rs
src/logger/: app_logger.rs  mod.rs
src/models/: account.rs  content.rs  execution.rs  log.rs  mod.rs  task.rs
src/publisher/: mod.rs  xhs_publisher.rs
src/repository/: account_repo.rs  content_repo.rs  log_repo.rs  mod.rs  task_repo.rs
src/router/: account.rs  content.rs  log.rs  mod.rs  task.rs
src/scheduler/: scheduler.rs
src/service/: account_service.rs  ai_service.rs  content_service.rs  log_service.rs  mod.rs  task_service.rs
