[package]
name = "ai-content-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Scheduler
tokio-cron-scheduler = "0.13"

# Environment
dotenvy = "0.15"

# Async
futures-util = "0.3"

# Cron scheduling
cron = "0.15"

# Random
rand = "0.8"

# HTTP client for AI API
reqwest = { version = "0.12", features = ["json"] }

# No dev dependencies for now
