[package]
name = "net_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
parking_lot = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[build-dependencies]
