[package]
name = "net_guard"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
parking_lot = "0.12"
crossterm = "0.27"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[[bin]]
name = "net_guard"
path = "src/main.rs"
